--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,64 +1,96 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700,800,900');
+
 @font-face {
-		  font-family: SFProText-bold;
-		  src: url("../fonts/SF-Pro-Text-Bold.woff");
-		}
+	font-family: SFProText-bold;
+	src: url("../fonts/SF-Pro-Text-Bold.woff");
+}
 
-		@font-face {
-		  font-family: SFProText;
-		  src: url("../fonts/SF-Pro-Text-Regular.otf");
-		}
+@font-face {
+	font-family: SFProText;
+  src: url("../fonts/SF-Pro-Text-Regular.otf");
+}
 
-		body {
-			padding: 0px;
-		}
+body {
+	padding: 0px;
+}
 
-		.side-bar {
-			width: 460px;
-			height: 728px;
-			left: 0px;
-			top: 0px;
-			background: rgba(199, 212, 226, 0.75);
-		}
+.side-bar {
+	left: 0px;
+	top: 0px;
+	width: 460px;
+	position: fixed;
+	height: 100%;
+	background: rgba(199, 212, 226, 0.75);
+}
 
-		.avatar-img {
-			margin: 113px 128px 0px 128px;
-			width: 205px;
-			height: 205px;
-		}
+.avatar-img {
+	margin: 113px 128px 0px 128px;
+	width: 205px;
+	height: 205px;
+}
 
-		ul {
-		  list-style-type: none;
-		  margin: 39px auto 47px auto;
-		  padding: 0;
-		  text-align: center;
-		}
+ul {
+  list-style-type: none;
+  margin: 39px auto 47px auto;
+  padding: 0;
+  text-align: center;
+}
 
-		li {
-			font-family: SF Pro Text;
-			font-style: normal;
-			font-weight: normal;
-			font-size: 16px;
-			line-height: normal;
-			text-align: center;
-			padding: 8px 19px;
-			margin-left: 17px;
-			border: 1px solid #333333;
-			box-sizing: border-box;
-			border-radius: 33px;
+li {
+	font-family: SF Pro Text;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	line-height: normal;
+	text-align: center;
+	padding: 8px 19px;
+	margin-left: 17px;
+	border: 1px solid #333333;
+	box-sizing: border-box;
+	border-radius: 33px;
 
-			display: inline-block;
-		}
+	display: inline-block;
+}
+a:link, a:visited {
+	color: #333333;
+}
 
-		hr {
-			width: 173px;
-			border: 1px solid #333333;
-			border-radius: 55px;
-		}
+hr {
+	width: 173px;
+	border: 1px solid #333333;
+	border-radius: 55px;
+}
 
-		.icon-center {
-		  display: block;
-		  margin-left: auto;
-		  margin-right: auto;
-		  width: 50%;
-		  height: 28px;
-		}
+.icon-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 28px;
+}
+
+.txt-body {
+	margin-left:460px;
+	padding:162px 74px 162px 85px ;
+	height:100%;
+}
+
+h2 {
+	width: 600px;
+	font-family: 'Montserrat', sans-serif;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 64px;
+	line-height: 86px;
+	letter-spacing: 0.04em;
+	color: #000000;
+}
+
+p {
+	font-family: SF Pro Text;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 24px;
+	line-height: 37px;
+	color: #000000;
+}
